<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:conversorvoice="http://conversorvoice.com" >

    <PreferenceCategory android:title="@string/VolumePreferences" >
        <utn.frba.ps.conversorvoice.widgets.SeekBarPreference
            android:defaultValue="50"
            android:key="VolumeLevel"
            android:title="@string/VolumeLevelPreference"
            conversorvoice:maxValue="100"
            conversorvoice:minValue="0"
            conversorvoice:valueFormat="%s%%" />
        <utn.frba.ps.conversorvoice.widgets.SeekBarPreference
            android:defaultValue="6"
            android:key="SoundAmplification"
            android:title="@string/SoundAmplificationPreference"
            conversorvoice:maxValue="12"
            conversorvoice:minValue="0"
            conversorvoice:valueFormat="%s dB" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/SoundPreferences" >
        <utn.frba.ps.conversorvoice.widgets.ListPreference
            android:defaultValue="44100"
            android:entries="@array/SampleRateEntries"
            android:entryValues="@array/SampleRateValues"
            android:key="SampleRate"
            android:title="@string/SampleRatePreference" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ReduceNoise"
            android:title="@string/ReduceNoisePreference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/MiscPreferences" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="Logging"
            android:summary="@string/LoggingSummary"
            android:title="@string/LoggingPreference" />
    </PreferenceCategory>

</PreferenceScreen>